# rust-mc

./: .gdbinit  .gitignore  .tmux.conf  Cargo.toml  README.md  builderr.txt
src/: main.rs
