[package]
name = "rust-mc"
version = "0.1.0"
authors = ["Jackson Burnette <jacksondburnette@gmail.com>"]

[dependencies]
cortex-m = "0.5.2"
cortex-m-rt = "0.5.1"
embedded-hal = "0.2.1"
f3 = { version = "0.6.1", features = ["rt"] }
futures = { version = "0.1.23", default-features = false }
nb = { version = "0.1.1", features = ["unstable"] }
panic-abort = "0.2.0"
void = { version = "1", default-features = false }
